// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render align 1`] = `
<div
  className="a"
>
  Hello
</div>
`;

exports[`should render align 2`] = `
"
.a {
  text-align: center
}
"
`;

exports[`should render bold size 1`] = `
<div
  className="a b"
>
  Hello
</div>
`;

exports[`should render bold size 2`] = `
"
.a {
  font-size: 1rem
}

.b {
  font-weight: 700
}
"
`;

exports[`should render lowercase 1`] = `
<div
  className="a"
>
  Hello
</div>
`;

exports[`should render lowercase 2`] = `
"
.a {
  text-transform: lowercase
}
"
`;

exports[`should render normal size 1`] = `
<div
  className="a"
>
  Hello
</div>
`;

exports[`should render normal size 2`] = `
"
.a {
  font-size: 1rem
}
"
`;

exports[`should render semi-bold size 1`] = `
<div
  className="a b"
>
  Hello
</div>
`;

exports[`should render semi-bold size 2`] = `
"
.a {
  font-size: 1rem
}

.b {
  font-weight: 600
}
"
`;

exports[`should render small size 1`] = `
<div
  className="a b"
>
  Hello
</div>
`;

exports[`should render small size 2`] = `
"
.a {
  line-height: 1.3
}

.b {
  font-size: 0.8em
}
"
`;

exports[`should render titlecase case 1`] = `
<div
  className="a"
>
  Hello
</div>
`;

exports[`should render titlecase case 2`] = `
"
.a:first-letter {
  text-transform: capitalize
}
"
`;

exports[`should render type 1`] = `
<div
  className="a"
>
  Hello
</div>
`;

exports[`should render type 2`] = `
"
.a {
  color: #434148
}
"
`;
